# cuOP

./: .clang-format  .gitignore  CMakelists.txt  License  README.md  quick_build.sh
bench/: CMakeLists.txt  run_all_benchmarks.sh.in
bench/cuBlas/axpy/: CMakeLists.txt  bench_axpy.cpp
bench/cuBlas/copy/: CMakeLists.txt  bench_copy.cpp
bench/cuBlas/dot/: CMakeLists.txt  bench_dot.cpp
bench/cuBlas/gemm/: CMakeLists.txt  bench_gemm.cpp
bench/cuBlas/gemv/: CMakeLists.txt  bench_gemv.cpp
bench/cuBlas/scal/: CMakeLists.txt  bench_scal.cpp
bench/cuBlas/symm/: CMakeLists.txt  bench_symm.cpp
bench/cuBlas/trsm/: CMakeLists.txt  bench_trsm.cpp
bench/cuDNN/AveragePool/: CMakeLists.txt  bench_averagepool.cpp
bench/cuDNN/BatchNorm/: CMakeLists.txt  bench_batchnorm.cpp
bench/cuDNN/Convolution/: CMakeLists.txt  bench_convolution.cpp
bench/cuDNN/LayerNorm/: CMakeLists.txt  bench_layernorm.cpp
bench/cuDNN/MatMul/: CMakeLists.txt  bench_matmul.cpp
bench/cuDNN/MaxPool/: CMakeLists.txt  bench_maxpool.cpp
bench/cuDNN/Relu/: CMakeLists.txt  bench_relu.cpp
bench/cuDNN/Softmax/: CMakeLists.txt  bench_softmax.cpp
cmake/: cuOP.pc.in  cuOPConfig.cmake.in
docs/: BLAS_JIT_API.md  BLAS_JIT_EXAMPLES.md  BLAS_OPERATORS.md  DNN_OPERATORS.md  OPERATORS_OVERVIEW.md  PYTHON_API.md  README_jit_persistent_cache.md  jit_persistent_cache_guide.md  performance_monitoring_guide.md
example/: CMakeLists.txt  README.md
example/advanced_features/: CMakeLists.txt  jit_demo.cpp  memory_pool_demo.cpp
example/basic_operations/: CMakeLists.txt  basic_axpy.cpp  basic_dot.cpp  basic_gemm.cpp  basic_gemv.cpp
example/deep_learning/: CMakeLists.txt  conv2d_demo.cpp  relu_demo.cpp  softmax_demo.cpp
example/model_deployment/: CMakeLists.txt  README.md  cnn_deployment.cpp
example/model_deployment/models/: load_pretrained_model.py
example/model_deployment/models/pretrained_weights/: weights_info.txt
example/model_inference/: CMakeLists.txt  simple_cnn_inference.cpp
example/performance_benchmark/: CMakeLists.txt  performance_test.cpp
include/base/: memory_pool.hpp
include/cuda_op/abstract/: operator.hpp
include/cuda_op/detail/cuBlas/: axpy.hpp  copy.hpp  dot.hpp  gemm.hpp  gemv.hpp  scal.hpp  symm.hpp  trsm.hpp
include/cuda_op/detail/cuDNN/: averagepool.hpp  averagepool2D.hpp  batchmatmul.hpp  batchnorm.hpp  convolution.hpp  flatten.hpp  globalaverpool.hpp  globalaverpool2D.hpp  globalmaxpool.hpp  globalmaxpool2D.hpp  kernel_fusion.hpp  layernorm.hpp  matmul.hpp  maxpool.hpp  maxpool2D.hpp  relu.hpp  softmax.hpp  view.hpp
include/data/: README_tensor.md  tensor.hpp
include/jit/: global_jit_manager.hpp  ijit_plugin.hpp  jit_compiler.hpp  jit_config.hpp  jit_persistent_cache.hpp  jit_wrapper.hpp
include/jit/Blas/: README.md  blas_jit_plugins.hpp  example_usage.hpp  gemm_batched_jit_plugin.hpp  gemm_jit_plugin.hpp  gemv_jit_plugin.hpp  ger_jit_plugin.hpp  symm_herk_jit_plugin.hpp  trmm_jit_plugin.hpp  trsm_jit_plugin.hpp  vector_ops_jit_plugin.hpp
include/performance/: auto_tuner.hpp  hotspot_analyzer.hpp  memory_analyzer.hpp  performance_monitor.hpp
include/util/: status_code.hpp
python/: README.md  performance_dashboard.py  requirements.txt  setup.py
python/cuop/: __init__.py  core.cpp
python/examples/: advanced_usage.py  basic_usage.py  complete_operator_demo.py  quick_start.py
python/templates/: dashboard.html
src/base/: README_memory_pool.md  memory_pool.cu
src/cuda_op/detail/: relu.cu
src/cuda_op/detail/cuBlas/: axpy.cu  copy.cu  dot.cu  gemm.cu  gemv.cu  scal.cu  symm.cu  trsm.cu
src/cuda_op/detail/cuBlas/Introduce/: gemm.md
src/cuda_op/detail/cuDNN/: averagepool.cu  averagepool2D.cu  batchmatmul.cu  batchnorm.cu  convolution.cu  flatten.cu  globalaverpool.cu  globalaverpool2D.cu  globalmaxpool.cu  globalmaxpool2D.cu  kernel_fusion.cu  layernorm.cu  matmul.cu  maxpool.cu  maxpool2D.cu  relu.cu  softmax.cu  view.cu
src/cuda_op/detail/cuDNN/introduce/: averagepool.md  averagepool2D.md  batchmatmul.md  batchnorm.md  globalaveragepool.md  globalmaxpool.md  globalmaxpool2D.md  layernorm.md  maxpool.md  maxpool2D.md  softmax.md
src/jit/: global_jit_manager.cu  jit_compiler.cu  jit_docs.md  jit_persistent_cache.cu
src/jit/Blas/: blas_jit_plugin_manager.cu  gemm_batched_jit_plugin.cu  gemm_jit_plugin.cu  gemv_jit_plugin.cu  ger_jit_plugin.cu  symm_herk_jit_plugin.cu  trmm_jit_plugin.cu  trsm_jit_plugin.cu  vector_ops_jit_plugin.cu
src/performance/: auto_tuner.cu  hotspot_analyzer.cu  memory_analyzer.cu  performance_monitor.cu
src/util/: status_code.cpp
test/: CMakeLists.txt  run_all_tests.sh.in
test/JIT_test/: CMakeLists.txt  test_jit_system.cpp  test_persistent_cache.cpp  test_trsm_jit.cpp
test/cuBlas/test_axpy/: CMakeLists.txt  test_axpy.cpp
test/cuBlas/test_copy/: CMakeLists.txt  test_copy.cpp
test/cuBlas/test_dot/: CMakeLists.txt  test_dot.cpp
test/cuBlas/test_gemm/: CMakeLists.txt  test_gemm.cpp
test/cuBlas/test_gemv/: CMakeLists.txt  test_gemv.cpp
test/cuBlas/test_scal/: CMakeLists.txt  test_scal.cpp
test/cuBlas/test_symm/: CMakeLists.txt  test_symm.cpp
test/cuBlas/test_trsm/: CMakeLists.txt  test_trsm.cpp
test/cuDNN/test_averagepool2D/: CMakeLists.txt  test_averagepool2D.cpp
test/cuDNN/test_batchnorm/: CMakeLists.txt  test_batchnorm.cpp
test/cuDNN/test_convolution/: CMakeLists.txt  test_convolution.cpp
test/cuDNN/test_flatten/: CMakeLists.txt  test_flatten.cpp
test/cuDNN/test_globalaverpool2D/: CMakeLists.txt  test_globalaverpool2D.cpp
test/cuDNN/test_globalmaxpool2D/: CMakeLists.txt  test_globalmaxpool2D.cpp
test/cuDNN/test_layernorm/: CMakeLists.txt  test_layernorm.cpp
test/cuDNN/test_matmul/: CMakeLists.txt  test_matmul.cpp
test/cuDNN/test_maxpool2D/: CMakeLists.txt  test_maxpool2D.cpp
test/cuDNN/test_relu/: CMakeLists.txt  test_relu.cpp
test/cuDNN/test_softmax/: CMakeLists.txt  test_softmax.cpp
test/cuDNN/test_view/: CMakeLists.txt  test_view.cpp
test/performance/: CMakeLists.txt  test_performance_monitor.cpp
test/util/: CMakeLists.txt  test_status_code.cpp
